--- a/engineeringhubfrontend/src/app/pages/view-project-page/view-project-page.component.html
+++ b/engineeringhubfrontend/src/app/pages/view-project-page/view-project-page.component.html
@@ -46,7 +46,7 @@
                 
 
                 <div class = "mt-4 font-bold text-xl">
-                    About: 
+                    Description: 
                 </div>
                 <div>
                     {{project.description}}
