--- a/engineeringhubfrontend/src/app/pages/browse-page/browse-page.component.html
+++ b/engineeringhubfrontend/src/app/pages/browse-page/browse-page.component.html
@@ -1,1 +1,11 @@
-<p>browse-page works!</p>
+<DefaultPageLayout>
+    <div class = "flex flex-col flex-grow h-full">
+        <div class = "mx-auto">    
+            <div class = "mt-8 text-2xl text-center">
+                Browsing the Hub
+                
+                <a class = "hover:underline text-mizzou-orange" href="#" [routerLink]="'/'">Go back</a>
+            </div>
+        </div>
+    </div>
+</DefaultPageLayout>
