--- a/engineeringhubfrontend/src/app/share/navbar/navbar.component.html
+++ b/engineeringhubfrontend/src/app/share/navbar/navbar.component.html
@@ -5,7 +5,7 @@
     </div>
 
     <div class = "ml-auto">
-        <a href="#" class = "nav-link">
+        <a href="#" class = "nav-link"  routerLink="/browse" >
             Browse
         </a>
         
