--- a/engineeringhubfrontend/src/app/pages/browse-page/browse-page.component.html
+++ b/engineeringhubfrontend/src/app/pages/browse-page/browse-page.component.html
@@ -7,5 +7,37 @@
                 <a class = "hover:underline text-mizzou-orange" href="#" [routerLink]="'/'">Go back</a>
             </div>
         </div>
+
+        <div>
+            <div class = "mt-8 text-2xl text-center">
+                Notable Users
+            </div>
+    
+            <CardCarousal></CardCarousal>
+        </div>
+
+        <div>
+            <div class = "mt-8 text-2xl text-center">
+                Notable Projects
+            </div>
+    
+            <CardCarousal></CardCarousal>
+        </div>
+
+        <div>
+            <div class = "mt-8 text-2xl text-center">
+                Notable Groups
+            </div>
+    
+            <CardCarousal></CardCarousal>
+        </div>
+
+        <div class = "mb-8">
+            <div class = "mt-8 text-2xl text-center">
+                Notable Proposals
+            </div>
+    
+            <CardCarousal></CardCarousal>
+        </div>
     </div>
 </DefaultPageLayout>
