working on browsing feature in-progress: User

--- a/engineeringhubfrontend/src/app/pages/browse-page/browse-page.component.html
+++ b/engineeringhubfrontend/src/app/pages/browse-page/browse-page.component.html
@@ -13,9 +13,10 @@
                 Notable Users
             </div>
     
-            <CardCarousal></CardCarousal>
+            <CardCarousal [items] = "users"></CardCarousal>
         </div>
 
+        <!--
         <div>
             <div class = "mt-8 text-2xl text-center">
                 Notable Projects
@@ -39,5 +40,6 @@
     
             <CardCarousal></CardCarousal>
         </div>
+        -->
     </div>
 </DefaultPageLayout>
