--- a/engineeringhubfrontend/src/app/share/card-carousal/card-carousal.component.html
+++ b/engineeringhubfrontend/src/app/share/card-carousal/card-carousal.component.html
@@ -1,4 +1,4 @@
-<div>
+<div *ngIf = "items != null">
     <div class = "grid grid-cols-5 space-x-8 mx-8 mt-4">
                 
         <div class = "flex items-center col-span-1">
