added user cards

--- a/engineeringhubfrontend/src/app/pages/browse-page/browse-page.component.html
+++ b/engineeringhubfrontend/src/app/pages/browse-page/browse-page.component.html
@@ -13,7 +13,7 @@
                 Notable Users
             </div>
     
-            <CardCarousal [items] = "users"></CardCarousal>
+            <CardCarousal (viewItemEvent) = "userItemViewed($event)" itemType="user" [items] = "users"></CardCarousal>
         </div>
 
         <!--
