--- a/engineeringhubfrontend/src/app/share/carousal-card/carousal-card.component.html
+++ b/engineeringhubfrontend/src/app/share/carousal-card/carousal-card.component.html
@@ -1,9 +1,9 @@
-<div *ngIf = "mapToItem(item).title != undefined" class = "relative p-4 border-2 col-span-1 h-56">
-    <div class = "text-2xl">
-       {{mapUserToItem(item).title}}
+<div *ngIf = "mapToItem(item).title != undefined" class = "relative p-4 border-2 col-span-1">
+    <div class = "font-bold text-xl">
+       {{mapToItem(item).title}}
     </div>
-    <div class = "h-20 overflow-y-auto">
-        {{item.description}}
+    <div class = "h-32 py-4 overflow-y-auto">
+        {{mapToItem(item).description}}
     </div>
 
     <button (click)="cardClick()" class = "absolute bottom-4 right-8 w-20 hover:bg-mizzou-orange bg-mizzou-gold py-1 px-2 text-white float-right">
