connect project view

--- a/engineeringhubfrontend/src/app/share/carousal-card/carousal-card.component.html
+++ b/engineeringhubfrontend/src/app/share/carousal-card/carousal-card.component.html
@@ -1,5 +1,5 @@
 <div *ngIf = "mapToItem(item).title != undefined" class = "relative p-4 border-2 col-span-1">
-    <div class = "font-bold text-xl">
+    <div class = "font-bold text-xl px-2">
        {{mapToItem(item).title}}
     </div>
     <div class = "h-32 py-4 overflow-y-auto">
