added groups page and linked via navbar

--- a/engineeringhubfrontend/src/app/pages/profile-page/profile-page.component.html
+++ b/engineeringhubfrontend/src/app/pages/profile-page/profile-page.component.html
@@ -14,7 +14,7 @@
                     <div class = "menu-row">
                         My Friends
                     </div>
-                    <div class = "menu-row">
+                    <div (click) = "navigateToGroups()" class = "menu-row">
                         My Groups
                     </div>
                     <div class = "menu-row">
