--- a/engineeringhubfrontend/src/app/share/result-card/result-card.component.html
+++ b/engineeringhubfrontend/src/app/share/result-card/result-card.component.html
@@ -32,7 +32,7 @@
             </div>
     
             <div class = "w-40">    
-                <button class = "float-right rounded-full px-4 py-1 text-white hover:bg-mizzou-orange bg-mizzou-gold">
+                <button (click)="viewCard()" class = "float-right rounded-full px-4 py-1 text-white hover:bg-mizzou-orange bg-mizzou-gold">
                     View {{cardToDisplayString()}}
                 </button>
             </div>
