--- a/engineeringhubfrontend/src/app/pages/view-group-page/view-group-page.component.html
+++ b/engineeringhubfrontend/src/app/pages/view-group-page/view-group-page.component.html
@@ -73,7 +73,7 @@
             Group Events
         </div>
         
-        <button *ngIf = "userOwnsGroup" (click)="addGroupEvent()" class = "mx-8 ml-auto fit-content text-white rounded-full px-2 py-1 hover:bg-mizzou-orange bg-mizzou-gold">
+        <button *ngIf = "userOwnsGroup" (click)="AddGroupEvent()" class = "mx-8 ml-auto fit-content text-white rounded-full px-2 py-1 hover:bg-mizzou-orange bg-mizzou-gold">
             + Add Group Event
         </button>
         
@@ -91,10 +91,10 @@
                     {{getPrettyDate(groupEvent)}}
                 </div>
                 <div *ngIf = "userOwnsGroup" class = "mt-2 space-x-2">
-                    <button class = "hover:ring-4 ring-mizzou-gold px-2 py-1 text-white inline-block bg-mizzou-red">
+                    <button (click)="DeleteGroupEvent(groupEvent.id)" class = "hover:ring-4 ring-mizzou-gold px-2 py-1 text-white inline-block bg-mizzou-red">
                         Delete Event
                     </button>
-                    <button class = "hover:ring-4 ring-mizzou-gold px-2 py-1 text-white inline-block bg-mizzou-blue">
+                    <button (click)="EditGroupEvent(groupEvent.id)" class = "hover:ring-4 ring-mizzou-gold px-2 py-1 text-white inline-block bg-mizzou-blue">
                         Edit Event
                     </button>
                 </div>
