--- a/engineeringhubfrontend/src/app/pages/group-page/group-page.component.html
+++ b/engineeringhubfrontend/src/app/pages/group-page/group-page.component.html
@@ -21,7 +21,7 @@
         <!-- Group Options -->
         
         <div class = "mx-8 mt-4 ml-auto">
-            <button class = "bg-mizzou-black hover:ring-2 ring-mizzou-gold rounded-full px-4 py-1 mx-2 text-white">
+            <button (click)="AddNewGroup()" class = "bg-mizzou-black hover:ring-2 ring-mizzou-gold rounded-full px-4 py-1 mx-2 text-white">
                 + New Group
             </button>
         </div>
