filled out ui for event update

--- a/engineeringhubfrontend/src/app/pages/add-event-page/add-event-page.component.html
+++ b/engineeringhubfrontend/src/app/pages/add-event-page/add-event-page.component.html
@@ -4,7 +4,7 @@
             <div class = "mt-8 text-2xl text-center">
                 Creating new event
                 
-                <a class = "pl-4 hover:underline text-mizzou-orange" href="#" routerLink= "/projects/">Go back</a>
+                <a class = "pl-4 hover:underline text-mizzou-orange" href="#" routerLink= "/groups/">Go back</a>
             </div>
         </div>
 
