Added flag for if user owns the group

--- a/engineeringhubfrontend/src/app/pages/group-page/group-page.component.html
+++ b/engineeringhubfrontend/src/app/pages/group-page/group-page.component.html
@@ -33,6 +33,7 @@
                 (viewCardEvent)="ViewGroup($event)"
                 [extraMetaData]="groupResult.id"
                 [cardType]="groupCardType" 
+                [ownedByUser]="getUserOwnsGroup(groupResult)"
                 [genericName]="groupResult.name"></ResultCard>
             </div>
         
