--- a/engineeringhubfrontend/src/app/share/result-card/result-card.component.html
+++ b/engineeringhubfrontend/src/app/share/result-card/result-card.component.html
@@ -27,9 +27,19 @@
     
             </div>
         
-            <div class = "flex-grow text-center text-3xl">
-                {{genericName}}
+            
+
+            <div class = "flex-grow text-center">
+                <div class = "inline-block text-3xl">
+                    <div>{{genericName}}</div>
+    
+                </div>
+    
+                <div class = "ml-4 inline-block text-white rounded-full px-2 py-1 bg-mizzou-green"*ngIf="ownedByUser">
+                    Group Owner
+                </div>    
             </div>
+            
     
             <div class = "w-40">    
                 <button (click)="viewCard()" class = "float-right rounded-full px-4 py-1 text-white hover:bg-mizzou-orange bg-mizzou-gold">
